# mirror-augmented-engineer

./: .gitattributes  .gitignore  AGENTS.md  FEATURES.md  FEATURES_es.md  FEATURES_fr.md  README.md  README_es.md  README_fr.md  mcp.json  prompts-fix.txt  pyproject.toml
.github/: ISSUE_DRAFTS.md
.github/agents/: Create Github issue.agent.md  TDD Cycle.agent.md  TDD Green.agent.md  TDD Red.agent.md  TDD Refactor.agent.md
.github/prompts/: TDD Green step.prompt.md  TDD Red step.prompt.md  TDD Refactor step.prompt.md
.github/workflows/: copilot-setup-steps.yml
app/: main.py
app/application/: __init__.py
app/domain/: __init__.py  exceptions.py
app/infrastructure/: __init__.py  db.py
app/static/: index.html
application/: __init__.py  main.py
application/adapters/: order_api.py
application/controllers/: commande_controller.py
application/dto/: commande.py
application/tests/: test_create_order_application_end_to_end.py  test_place_order.py
application/use_cases/: place_order.py
docs/: PROJECT_STATE.md
docs/features/: 01_consult-balance_application_consult-balance.md  02_place-drink_application_place-drink.md  03_place-food_application_place-food.md  04_multiple-items_application_multiple-items-order.md  05_inventory-management_application_inventory-management.md  06_group-order_application_group-order.md  07_change-order_application_change-order.md  (+6 more)
domain/: __init__.py  exceptions.py
infrastructure/: __init__.py
scripts/: README.md  create_issue_runner.py  publish_issues.py  validate_issue.py
templates/: issue.md
(+110 files in other folders)
